// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GnoBlocklistErc20Vault deposit can be called by not blocked user 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 86543,
}
`;

exports[`GnoBlocklistErc20Vault mint osToken can mint from not blocked user 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 178454,
}
`;

exports[`GnoBlocklistErc20Vault transfer can transfer 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 58878,
}
`;
